src/components/WindowHorizontalScrollbar/WindowHorizontalScrollbar.module.scss
.window-horizontal-scrollbar {
	display: flex;
	position: relative;
	flex-grow: 1;
	height: 18px;
	border: {
		top: 1px solid #fefefe;
		bottom: 1px solid #0f0f0f;
		left: 1px solid #fefefe;
	}
	background-color: #aeaeae;

	&__inner {
		flex-grow: 1;
		height: 12px;
		margin: 2px;
		border: {
			top: 2px solid #fefefe;
			right: 1px solid #0f0f0f;
			bottom: 2px solid #0f0f0f;
			left: 1px solid #fefefe;
		}
	}

	&--is-active {
		background-color: #6e8ebe;
	}

	&::before {
		content: "";
		position: absolute;
		top: -1px;
		left: 0;
		width: 3px;
		height: 1px;
		background-image: linear-gradient(to right, #aeaeae, #aeaeae 2px, #0f0f0f 2px);
	}

	&--is-active#{&}::before {
		background-image: linear-gradient(to right, #6e8ebe, #6e8ebe 2px, #0f0f0f 2px);
	}
}

